feat: manejo de usuario

--- a/src/views/recovery-password.ejs
+++ b/src/views/recovery-password.ejs
@@ -76,7 +76,7 @@
                                                         <br>
                                                         <br>
                                                         <p>
-                                                            Si tienes problemas para ingresar al sitio con tu nueva contraseña por favor ponte en contacto con <strong>soporte@gmail.com</strong>
+                                                            Si tienes problemas para ingresar al sitio con tu nueva contraseña por favor ponte en contacto con  <strong><%= supportEmail %></strong>
                                                         </p>
                                                         <p>
                                                             Muchas gracias!!
