feat: actualizar template y query de usuario

--- a/src/views/register-user.ejs
+++ b/src/views/register-user.ejs
@@ -28,7 +28,7 @@
                                                     <h1
                                                             style="font-size:18px;line-height:30px;color:#073F5C;word-break:normal; text-align: center"
                                                     >
-                                                        Creación de usuario
+                                                        Notificación de creación de usuario
                                                     </h1>
                                                 </td>
                                             </tr>
@@ -75,6 +75,9 @@
                                                         </div>
                                                         <br>
                                                         <br>
+                                                        <p>
+                                                            Una vez ingresado se te solicitará crear una nueva contraseña por medidas de seguridad.
+                                                        </p>
                                                         <p>
                                                             Si tienes problemas para ingresar al sitio con tu nueva contraseña por favor ponte en contacto con <strong><%= supportEmail %></strong>
                                                         </p>
