feature: notificar carga de transcripciones

--- a/src/views/register-user.ejs
+++ b/src/views/register-user.ejs
@@ -56,7 +56,7 @@
                                                             <span style="font-size: 14px; font-weight: bold;"><%= company %></span>
                                                         </p>
                                                         <p>
-                                                            Hola <%= name %> <%= lastName %>, Por medio de la presente nos ponemos en contacto con usted, para informarle que hemos registrado su usuario en nuestro sistema.
+                                                            Hola <%= name %> <%= lastName %>, por medio de la presente nos ponemos en contacto con usted, para informarle que hemos registrado su usuario en nuestro sistema.
                                                         </p>
                                                         <p>
                                                             Para acceder a los servicios ofrecidos por el sistema debe acceder al enlace <%= appUrl %>, con las siguientes credenciales
