feature: Agregado nuevos metodos para nuevo flujo

--- a/src/views/recovery-password.ejs
+++ b/src/views/recovery-password.ejs
@@ -64,12 +64,12 @@
                                                         <div>
                                                             <table>
                                                                 <tr>
-                                                                    <th><strong>Usuario:</strong></th>
-                                                                    <th><%= email %></th>
+                                                                    <th style="text-align: left;"><strong>Usuario:</strong></th>
+                                                                    <th style="text-align: left;"><%= email %></th>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td><strong>Contraseña:</strong></td>
-                                                                    <td><%= password %></td>
+                                                                    <td style="text-align: left;"><strong>Contraseña:</strong></td>
+                                                                    <td style="text-align: left;"><%= password %></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
