--- a/src/views/user-notification.ejs
+++ b/src/views/user-notification.ejs
@@ -56,7 +56,7 @@
                                                             <span style="font-size: 14px; font-weight: bold;"><%= company %></span>
                                                         </p>
                                                         <p>
-                                                            Hola <%= name %> <%= lastName %>, por medio de la presente nos ponemos en contacto con usted, para informarle que el audio  <strong><%= originalName %></strong> ha sido procesado.
+                                                            Hola <%= name %> <%= lastName %>, nos ponemos en contacto con usted, para informarle que el audio  <strong><%= originalName %></strong> ha sido procesado.
                                                         </p>
                                                         <p>
                                                             Para visualizar la transcripción, por favor ingrese a la opción <strong>Registro de audio</strong>
@@ -67,12 +67,12 @@
                                                         <div>
                                                             <table>
                                                                 <tr>
-                                                                    <th><strong>Nombre:</strong></th>
-                                                                    <th><%= originalName %></th>
+                                                                    <th style="text-align: left;"><strong>Nombre:</strong></th>
+                                                                    <th style="text-align: left;"><%= originalName %></th>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td><strong>Fecha de carga:</strong></td>
-                                                                    <td><%= audioDate %></td>
+                                                                    <td style="text-align: left;"><strong>Fecha de carga:</strong></td>
+                                                                    <td style="text-align: left;"><%= audioDate %></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
