--- a/src/views/admin-notification.ejs
+++ b/src/views/admin-notification.ejs
@@ -67,20 +67,21 @@
                                                         <div>
                                                             <table>
                                                                 <tr>
-                                                                    <th><strong>Nombre:</strong></th>
-                                                                    <th><%= originalName %></th>
+                                                                    <th style="text-align: left;"><strong>ID:</strong></th>
+                                                                    <th style="text-align: left;"><%= _id %></th>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td><strong>Ubicación:</strong></td>
-                                                                    <td><%= destination %></td>
+                                                                    <td style="text-align: left;"><strong>Nombre:</strong></td>
+                                                                    <td style="text-align: left;"><%= originalName %></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td style="text-align: left;"><strong>Ubicación:</strong></td>
+                                                                    <td style="text-align: left;"><%= destination %></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
                                                         <br>
                                                         <br>
-                                                        <p>
-                                                            Si tienes problemas para ingresar al sitio con tu nueva contraseña por favor ponte en contacto con <strong><%= supportEmail %></strong>
-                                                        </p>
                                                         <p>
                                                             Muchas gracias!!
                                                         </p>
