feat: cambiar imagen footer de correo

--- a/src/views/recovery-password.ejs
+++ b/src/views/recovery-password.ejs
@@ -114,9 +114,9 @@
                     <tr>
                         <td style="text-align:center">
                             <img
-                                    src="https://static.vecteezy.com/system/resources/previews/004/680/291/original/password-recovery-glyph-icon-free-vector.jpg"
+                                    src="http://165.232.133.170:8080/app/assets/img/logo-hackick.jpg"
                                     alt="__icon__"
-                                    style="display:block;width:90px;height:auto;margin-left:auto;margin-right:auto;margin-bottom:10px"
+                                    style="display:block;width:11.5rem;height:auto;margin-left:auto;margin-right:auto;margin-bottom:10px"
                                     height="auto"
                             />
                         </td>
